--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="26_icon.png">
+    <link rel="icon" href="https://github.com/tamakagiokun/tagit16_search/blob/main/26_icon.png?raw=true">
     <title>Oshikatsu Goods Searcher</title>
     <style>
         /*ナビゲーションバー*/
@@ -38,7 +38,7 @@
             color: #696969
         }
         body{
-            background-image: url('24_background.png');
+            background-image: url('https://github.com/tamakagiokun/tagit16_search/blob/main/24_background.png?raw=true');
             background-size: 120%;
             background-repeat: no-repeat;  /* 繰り返しを防ぐ */
             background-position: center;  /* 画像を中央に配置 */
@@ -203,7 +203,7 @@
 <nav>
     <div id="header">
         <center>  <div class = resizeimage >
-            <a href="00_top.html"><img src="22_無題120_20241224150342.png"></a>
+            <a href="00_top.html"><img src="https://github.com/tamakagiokun/tagit16_search/blob/main/22_%E7%84%A1%E9%A1%8C120_20241224150342.png?raw=true"></a>
         </div></center>
     </div>
 </br>
@@ -241,7 +241,7 @@
                             ①グッズを検索したい推しの名前を入れる<br>（所属場所を名前の前に入れてもいい）<br><br>
                             ②予算を入れる<br><br>
                         </font>
-                        <img src="21_tukaikata.png" width="70%" height="70%">
+                        <img src="https://github.com/tamakagiokun/tagit16_search/blob/main/21_tukaikata.png?raw=true" width="70%" height="70%">
                     </center>
                 </div>
             </div>
@@ -254,7 +254,7 @@
     <center>
         <button class=search_botton onclick="sendMessage()">検索</button><br><br>
         <pre class="response" id="response"></pre>
-        <script src="10_app.js"></script>
+        <script src="app.js"></script>
     </center>
 </body>
 </html>
