--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <center>
         <button class=search_botton onclick="sendMessage()">検索</button><br><br>
         <pre class="response" id="response"></pre>
-        <script src="../main.js"></script>
+        <script src="app.js"></script>
     </center>
 </body>
 </html>
